# PythonProject1

./: README.md  pyproject.toml
scr/: category.py  classes.py  main.py  product_iterator.py  utils.py
test/: test_categogy.py  test_classes.py  test_product.py  test_utils.py
